-
Bug
-
Resolution: Done
-
Not Evaluated
-
6.2.0
-
None
-
fc1e1878743bcaac0c81a4748a00d0042cc15815 (qt/qtsvg/dev) 65de4d17d82a490c8b245475ecf2e3df2b95703c (qt/qtsvg/6.2)
The attached file whose x,y are specified in pt is rendered incorrectly.
See the attached screenshot of qmlscene vs inkspace. 
| For Gerrit Dashboard: QTBUG-97421 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 376065,2 | Fix text x/y when the length is not in pixels | dev | qt/qtsvg | Status: MERGED | +2 | 0 |
| 376115,2 | Fix text x/y when the length is not in pixels | 6.2 | qt/qtsvg | Status: MERGED | +2 | 0 |